Scrollbar style fix

--- a/src/app/components/about-products/about-products.component.scss
+++ b/src/app/components/about-products/about-products.component.scss
@@ -89,18 +89,21 @@
 
 ::-webkit-scrollbar {
   width: 20px;
+  height: 10px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
   border-radius: var(--border-radius);
   background: var(--background-color--accent);
+  height: 10px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: var(--button-color);
   border-radius: var(--border-radius);
+  height: 10px;
 }
 
 /* Handle on hover */
